fix(app): h2 span visibility with scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -261,7 +261,7 @@ article {
     color: $white;
     text-transform: uppercase;
     font-size: 18px;
-    padding: 10px;
+    padding: 8px;
 
     span {
         visibility: hidden;
@@ -282,7 +282,7 @@ article:first-child h2>span {
     background: $color1;
     color: $color4;
     font-size: 16px;
-    padding: 8px;
+    padding: 6px;
     padding-left: 10px;
 }
 
